[package]
name = "simple-jprofiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpp_demangle = "0.4.3"
libc = "0.2.150"


[lib]
crate-type = ["cdylib"]
name="sjprofiler"

[build-dependencies]
cc = "1.0.83"
